Parses the NIfTI header of a file and allows working with image data by chunks
It is not possible to use niftiReaderJs.decompress, as it expects
the full data to be available.

Instead, we're using pako directly and inflating each chunk.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
               <button type="submit" id="fetch">Fetch</button>
               <datalist id="sample-files-paths">
                 <option value="data/sample_image.nii.gz">sample_image.nii.gz (compressed, 1.5 MB)</option>
-                <option value="data/mni152_2009_256.nii.gz">mni152_2009_256.nii.gz (compressed, 1.5 MB)</option>
+                <option value="data/mni152_2009_256.nii.gz">mni152_2009_256.nii.gz (compressed, 4.5 MB)</option>
+                <option value="data/avg152T1_LR_nifti.nii">avg152T1_LR_nifti.nii (uncompressed, 0.9 MB)</option>
               </datalist>
             </div>
           </fieldset>
