Loads j/k orthogonal NIfTIs (still rudimentarily)
Makes the code able to load a slice while still receiving the NIfTI image.

The code does not check if the necessary bytes have already been received and processed.

No metadata has been provided yet.

Each pixel is occupying a lot of space and demanding lots of processing (matrix multiplication to find its x,y,z in patient coordinates). This was done because it is not possible anymore to use ndarray to change how to traverse the matrix (as we don't have the full matrix), and also to prepare for MPR (it seems Papaya holds the info this way too - need to check).

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="utf-8">
     <title>Streaming an arraybuffer POC</title>
     <link rel="stylesheet" href="milligram.min.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
       <h1>Streaming an <code>arraybuffer</code></h1>
+      <!-- enabled element -->
+      <div id="cornerstone-image" style="width: 256px; height: 256px;" data-empty="image will show here"></div>
       <p>
         This is a proof of concept of streaming an <code>arraybuffer</code>
         from the server to the browser, which works cross-browser (thanks to
