--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
           <fieldset>
             <label for="filename">File:</label>
             <div style="display: flex; justify-content: space-between;">
-              <input type="text" id="file" value="" placeholder="Choose a file here" style="margin-right: 1rem;" list="sample-files-paths">
+              <input type="text" id="file" value="" placeholder="Choose a file here" autofocus list="sample-files-paths">
               <button type="submit" id="fetch">Fetch</button>
               <datalist id="sample-files-paths">
                 <option value="data/sample_image.nii.gz">sample_image.nii.gz (compressed, 1.5 MB)</option>
                 <option value="data/mni152_2009_256.nii.gz">mni152_2009_256.nii.gz (compressed, 4.5 MB)</option>
                 <option value="data/avg152T1_LR_nifti.nii">avg152T1_LR_nifti.nii (uncompressed, 0.9 MB)</option>
+                <option value="data/r_volume_Virtual_PET.nii.gz">r_volume_Virtual_PET.nii.gz (compressed, 5 MB)</option>
               </datalist>
             </div>
           </fieldset>
